--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">2,604</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">2,719</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">pckg5.Git_1</td><td><a href="#m0">LoginGit</a></td><td rowspan="1">1759077583325</td><td rowspan="1">242</td></tr><tr class="passedodd"><td rowspan="1">pckg5.Git_2</td><td><a href="#m1">GitLogin2</a></td><td rowspan="1">1759077581011</td><td rowspan="1">2307</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Pckg6.GetResponce_1</td><td><a href="#m0">Getresponce200</a></td><td rowspan="1">1759082395314</td><td rowspan="1">2448</td></tr><tr class="passedodd"><td rowspan="1">Pckg6.GetResponse_2</td><td><a href="#m1">Get_Apir_response</a></td><td rowspan="1">1759082397768</td><td rowspan="1">217</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">pckg5.Git_1#LoginGit</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">pckg5.Git_2#GitLogin2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">Pckg6.GetResponce_1#Getresponce200</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">Pckg6.GetResponse_2#Get_Apir_response</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
