--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">2,598</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">3,095</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Pckg_Json_30_09_2025.Api_Response_1</td><td><a href="#m0">ApiResponse200</a></td><td rowspan="1">1759197070643</td><td rowspan="1">204</td></tr><tr class="passedodd"><td rowspan="1">Pckg_Json_30_09_2025.Api_Response_2</td><td><a href="#m1">GetResponse</a></td><td rowspan="1">1759197068290</td><td rowspan="1">2348</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">pckg30_09.GetResponse_Class_1</td><td><a href="#m0">GetResponse200</a></td><td rowspan="1">1759220925518</td><td rowspan="1">594</td></tr><tr class="passedodd"><td rowspan="1">pckg30_09.GetResponse_Class_2</td><td><a href="#m1">GetResponse200</a></td><td rowspan="1">1759220923049</td><td rowspan="1">2464</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">Pckg_Json_30_09_2025.Api_Response_1#ApiResponse200</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">Pckg_Json_30_09_2025.Api_Response_2#GetResponse</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">pckg30_09.GetResponse_Class_1#GetResponse200</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">pckg30_09.GetResponse_Class_2#GetResponse200</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
