--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\LENOVO\AppData\Local\Temp\testng-eclipse-413964814\testng-customsuite.xml</span>
+                    <span>C:\Users\LENOVO\AppData\Local\Temp\testng-eclipse-1788233763\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Response_pckg_30_09_2025.Class_Response_C_200" class="method navigator-link" hash-for-method="GetResponse200Code">GetResponse200Code</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="pckg_30_09_2025.Publish200_GetCode" class="method navigator-link" hash-for-method="GetResponseCode">GetResponseCode</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Response_pckg_30_09_2025.Class_Response_C_200</span>
+              <span class="class-name">pckg_30_09_2025.Publish200_GetCode</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="GetResponse200Code">
-                  </a> <!-- GetResponse200Code -->
-                  <span class="method-name">GetResponse200Code</span>
+                  <a name="GetResponseCode">
+                  </a> <!-- GetResponseCode -->
+                  <span class="method-name">GetResponseCode</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\LENOVO\AppData\Local\Temp\testng-eclipse-413964814\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\LENOVO\AppData\Local\Temp\testng-eclipse-1788233763\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,7 +145,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Response_pckg_30_09_2025.Class_Response_C_200&quot;/&gt;
+      &lt;class name=&quot;pckg_30_09_2025.Publish200_GetCode&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -187,14 +187,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'GetResponse200Code')
-data.setCell(0, 2, 'Response_pckg_30_09_2025.Class_Response_C_200')
-data.setCell(0, 3, 2707);
+data.setCell(0, 1, 'GetResponseCode')
+data.setCell(0, 2, 'pckg_30_09_2025.Publish200_GetCode')
+data.setCell(0, 3, 1886);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -220,9 +220,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">Response_pckg_30_09_2025.Class_Response_C_200</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">pckg_30_09_2025.Publish200_GetCode</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">GetResponse200Code</span>
+                <span class="method-name">GetResponseCode</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
